# turbine

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
cmake/linux/: FindSDL2_image.cmake
cmake/windows/: FindCURL.cmake  FindSDL2.cmake  FindSDL2_image.cmake
libs/curl/lib/x64/: curl.lib
src/: CMakeLists.txt  bridge.cpp  bridge.h  bridgesummarywidget.cpp  bridgesummarywidget.h  camera.h  camerarep.cpp  camerarep.h  commandbar.cpp  commandbar.h  configuration.cpp  configuration.h  encoding.cpp  encoding.h  fonts.cpp  fonts.h  geolocationdata.cpp  geolocationdata.h  httpclient.cpp  httpclient.h  icons.cpp  icons.h  ipaddress.cpp  ipaddress.h  log.cpp  log.h  main.cpp  mainmenubar.cpp  mainmenubar.hpp  render.h  server.hpp  settings.cpp  settings.h  textureloader.cpp  textureloader.h  threadpool.cpp  threadpool.h  turbine.cpp  turbine.h  turbinerep.cpp  (+5 more)
src/atlas/: atlas.cpp  atlas.h  pindata.cpp  pindata.hpp  pins.cpp  pins.hpp  pinstack.cpp  pinstack.hpp  tile.cpp  tile.h  tilestreamer.cpp  tilestreamer.h
src/bridge/: bridge.cpp  bridge.fwd.hpp  bridge.h  bridgegeolocation.cpp  bridgegeolocation.hpp  bridgeissue.hpp  bridgestats.cpp  bridgestats.hpp  bridgesummarywidget.cpp  bridgesummarywidget.h  statemachine.cpp  statemachine.h
src/codecs/: codec.h  codecmanager.cpp  codecmanager.h  stream.h
src/codecs/mjpeg/: codecmjpeg.cpp  codecmjpeg.h  multipartblock.cpp  multipartblock.h  streammjpeg.cpp  streammjpeg.h
src/core/: platform.hpp  stringops.cpp  stringops.hpp
src/core/shellcommand/: shellcommand.cpp  shellcommand.hpp  shellcommandimpl.hpp
src/core/shellcommand/linux/: shellcommandlinux.cpp  shellcommandlinux.h  shellcommandlinux.hpp
src/core/shellcommand/windows/: shellcommandwindows.cpp  shellcommandwindows.hpp
src/database/: database.cpp  database.h  databasetime.cpp  databasetime.h  preparedstatement.cpp  preparedstatement.h  queryresult.cpp  queryresult.h
src/deployment/: ansiblecommand.cpp  ansiblecommand.h  deployment.cpp  deployment.h  monitor.cpp  monitor.hpp
src/ext/imgui/: imconfig.h
src/ext/imguiext/: cubicbezier.cpp  cubicbezier.h  widgets.cpp  widgets.h
src/geolocation/: geolocationdata.cpp  geolocationdata.hpp  geolocationqueryresult.hpp  geolocationservice.cpp  geolocationservice.hpp
src/providers/: provider.cpp  provider.h
src/providers/digitalocean/: digitaloceanprovider.cpp  digitaloceanprovider.h  dropletinfo.cpp  dropletinfo.h  firewallmanager.cpp  firewallmanager.hpp  imageinfo.cpp  imageinfo.h
src/tasks/: searchtask.cpp  searchtask.h  task.cpp  task.h
src/tasks/geolocation/: geolocation.cpp  geolocation.h
src/tasks/googlesearch/: googlesearch.cpp  googlesearch.h  query.cpp  query.h
src/tasks/httpcameradetector/: htmlstreamparser.c  htmlstreamparser.h  httpcameradetector.cpp  httpcameradetector.h  rule.cpp  rule.h
src/veilid/: veilidnetwork.cpp  veilidnetwork.hpp  veilidserver.hpp
src/webclient/: webclient.cpp  webclient.h  webclientdebug.cpp  webclientdebug.h  webclientrequestresult.cpp  webclientrequestresult.h
src/windows/: bridgeswindow.cpp  bridgeswindow.h  bridgewindow.cpp  bridgewindow.hpp  createbridgewindow.cpp  createbridgewindow.h  deploymentwindow.cpp  deploymentwindow.hpp  logwindow.cpp  logwindow.hpp  overviewwindow.cpp  overviewwindow.hpp  settingswindow.cpp  settingswindow.h  summarywindow.cpp  summarywindow.h  window.cpp  window.h
src/windows/graphs/: connectionsgraph.cpp  connectionsgraph.hpp  distributionmethodgraph.cpp  distributionmethodgraph.hpp  graph.cpp  graph.hpp  percountrygraph.cpp  percountrygraph.hpp
